* Comments system for locations: Users can see all comments and subcomments, but only logged users can add comment or subcomment. Admin can remove comment or subcomment. * Rate system for locations: users can see average of rates for any location. Only logged users can rate the location. All users can add only 1 rate for 1 location. * Add favourites location system: Logged user can add some location to favourites, or remove them from favourites. * Little other changes in location - showing photos works better, layout is repaired. * Admin panel - add photos manager. Admin can remove photos, or change it's visibility. * Admin panel - little changes in userquestions layout

--- a/adminpanel/style_admin.css
+++ b/adminpanel/style_admin.css
@@ -281,3 +281,8 @@ textarea {
     margin-bottom:20px;
 
 }
+
+.photo-flex {
+ margin: 0 auto !important;
+}
+.photo-flex > img { object-fit:cover !important; max-width:300px !important; max-height:100px !important}
