--- a/przewodnik/style_przewodnik.css
+++ b/przewodnik/style_przewodnik.css
@@ -130,7 +130,7 @@ input, select {
     text-align:center;
     left:0;
     float:left;
-    margin-top:50px;
+    margin-top:10px;
 }
 
 .photo-small {
@@ -138,6 +138,8 @@ input, select {
     font-size:16px;
     padding: 5px;
     font-weight:600;
+    overflow:hidden;
+
 }
 
 .photo-small > img { object-fit:cover !important; max-width:100px !important; max-height:66px !important}
@@ -156,23 +158,23 @@ a {
 }
 
 .photo-big-container {
-    margin-top:50px;
+    margin-top:10px;
     margin-left:10px;
     border:2px solid black;
     min-height:160px;
     min-width:240px;
     background-color:#292929;
-    position: fixed;
-    left:12%;
-    top:45%;
- }
+    float:left;
+    position:relative;
+    max-height:40%;
+}
 
-.photo-big > img { min-width:240px !important; min-height:160px !important; max-width:300px !important}
+.photo-big > img { min-width:240px !important; min-height:160px !important; max-width:300px !important; max-height:40% !important}
 
 .guide-details {
-    margin-top:50px;
-    float:left;
-    width:auto;
+    margin-top:10px;
+    float:right;
+    width:100%;
     text-align:left;
     border: 2px solid black;
     font-family:Ubuntu;
@@ -194,12 +196,218 @@ a {
 
 .guide-description {
     max-width: 65%;
-    margin-top:50px;
-    margin-left:10px;
+    margin-top:10px;
     padding:20px;
     background-image: linear-gradient(to bottom, #fafafa, #e1e1e7);
     border:1px solid black;
     border-radius:10px;
     float:right;
     text-align:justify;
+}
+
+
+.guide-comment-container {
+    min-width:65%;
+    max-width:65%;
+    padding:5px 20px 5px 20px;
+    margin-top:10px;
+    float:right;
+    border:1px solid black;
+    border-radius:20px;
+    background-color: #aa9959;
+
+}
+
+.guide-comment-title {
+    font-size:25px;
+    color: #292929;
+    padding:5px 30px 5px 30px;
+    text-align:center;
+    font-weight:600;
+}
+
+
+.guide-comment {
+    width: 90%;
+    height: auto;
+    padding:10px 10px 30px 10px;
+    background-color:#ccbb7b;
+    border-radius:5px;
+    border: 1px solid #292929;
+    margin: 0 auto;
+    margin-bottom:10px;
+    position:relative;
+}
+
+.guide-author {
+    float:left;
+    font-size:14px;
+    display:inline-block;
+    font-weight:600;
+    position:absolute;
+    bottom:30px;
+    left:10px
+
+}
+
+.guide-pubdate {
+    float:right;
+    font-size:14px;
+    display:inline-block;
+    font-weight:600;
+    position:absolute;
+    bottom:30px;
+    right:10px;
+}
+
+.remove-button {
+    background-color:red;
+    color:white;
+    border-radius:5px;
+    height:auto;
+    width:25%;
+    text-align:center;
+    position:absolute;
+    bottom:10px;
+    left:10px;
+}
+
+.remove-button:hover {
+    background-color: darkred;
+}
+
+.comment-reply {
+    background-color: #0da4e0;
+    color:white;
+    border-radius:5px;
+    height:auto;
+    width:25%;
+    text-align:center;
+    position:absolute;
+    bottom:10px;
+    right:10px;
+}
+
+.comment-reply:hover {
+    background-color: #0b82c0;
+}
+
+.comment-reply-input {
+    width: 100%;
+    height:50px;
+    border-radius:5px;
+    border: 1px solid black;
+    background-image: linear-gradient(to bottom, #fafafa, #e1e1e7);
+    margin: 5px 0 5px auto;
+    display:none;
+
+}
+
+.comment-reply-send {
+    background-color: #ddb500;
+    color:#292929;
+    border-radius:5px;
+    height:auto;
+    width:25%;
+    text-align:center;
+    margin-bottom:10px;
+    display:none;
+    border:0;
+}
+
+.comment-reply-send:hover {
+    background-color: #bb9300;
+}
+
+.guide-comment-2 {
+    width: 90%;
+    height: auto;
+    padding:10px 10px 30px 10px;
+    background-color:#ccbb7b;
+    border-radius:5px;
+    border: 1px solid #292929;
+    margin: 0 auto;
+    margin-bottom:10px;
+    position:relative;
+    display:none;
+
+}
+
+.comment-new-input {
+    width: 100%;
+    height:50px;
+    border-radius:5px;
+    border: 1px solid black;
+    background-image: linear-gradient(to bottom, #fafafa, #e1e1e7);
+    margin: 5px 0 5px auto;
+
+}
+
+.comment-new-send {
+    background-color: #ddb500;
+    color:#292929;
+    border-radius:5px;
+    height:auto;
+    width:25%;
+    text-align:center;
+    margin-bottom:10px;
+    border:0;
+}
+
+.comment-new-send:hover {
+    background-color: #bb9300;
+}
+
+.guide-comment-3 {
+    width: 90%;
+    height: auto;
+    padding:10px 10px 30px 10px;
+    background-color:#ccbb7b;
+    border-radius:5px;
+    border: 1px solid #292929;
+    margin: 0 auto;
+    margin-bottom:10px;
+    position:relative;
+
+}
+
+.rate {
+
+    width: 90%;
+    height: 100px;
+    background-color:red;
+}
+
+.guide-rate {
+    font-size:25px;
+    color: #ddb500;
+    background-color: #292929;
+     padding:5px 30px 5px 30px;
+    text-align:center;
+    font-weight:600;
+    margin:0 auto;
+}
+
+.star {
+    width:30px;
+    height:30px;
+    padding:0;
+}
+
+.guide-favourite {
+    min-width:65%;
+    max-width:65%;
+    padding:5px 20px 5px 20px;
+    margin-top:10px;
+    float:right;
+    border:1px solid black;
+    border-radius:20px;
+    background-color: #0da4e0;
+    color: whitesmoke;
+    font-weight:600;
+    text-align:center;
+}
+
+.guide-favourite:hover {
+    background-color: #0b82c0;
 }
